[tool.poetry]
name = "asadal-pay-tz"
version = "0.1.0"
description = ""
authors = ["kaidenvlr <kaidenvlr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.21"}
alembic = "^1.12.0"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
